# Research-Paper-Finder

./: .env.example  .gitignore  README.md  publish.bat  pyproject.toml  requirements.txt  research_paper_finder.py
research_paper_finder/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
